--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -5,15 +5,23 @@
     <title>User</title>
 </head>
 <body>
-
 <p th:text="${user.getId()}">VALUE</p>
 <p th:text="${user.getName()}">VALUE</p>
 <p th:text="${user.getSurname()}">VALUE</p>
 <p th:text="${user.getEmail()}">VALUE</p>
 
+<a th:href="@{/admin/{id}/edit(id=${user.getId()})}">Edit</a>
+
+<br/>
 <br/>
 
-<a href="/logout" class="button">Logout</a>
+<form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
+    <input type="submit" value="DELETE"/>
+</form>
+
+<br/>
+
+<a href="/admin" class="button">All users</a>
 
 </body>
 </html>
