--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -30,9 +30,9 @@
     <div style="color:red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
     <br>
 
-<!--    <label for="password">Password</label>-->
-<!--    <input type="text" th:field="*{password}" id="password"/>-->
-<!--    <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</div>-->
+    <label for="password">Password</label>
+    <input type="text" th:field="*{password}" id="password"/>
+    <div style="color:red" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password error</div>
 
     <br>
 
