--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -30,9 +30,12 @@
     </tr>
 
     </tbody>
+
 </table>
 
+
 <br/>
+<a href="/logout" class="button">Logout</a>
 <hr/>
 
 <a href="/admin/new" class="button">Create new User</a>
